manual/1.13.0/index.md
# native-toolkit Manual

Language:

- English (this page)
- Korean: [index.ko.md](index.ko.md)
- Japanese: [index.ja.md](index.ja.md)

Markdown files in this directory are published as versioned documents under `docs/<version>/manual/`.

# Purpose of this manual

- Summarize setup steps and practical operation notes that are hard to cover with generated docs alone (Dokka / DocC / Doxygen)
- Keep hand-written docs separate from generated output (`docs/`) so they are not overwritten during publish

# What you can learn on this page

- Installation / onboarding
- Platform-specific setup
  - Android (Gradle)
  - iOS (Xcode)
  - Windows (Visual Studio)
  - macOS (Xcode)
- API usage examples

# Generated documentation (API references)

- Android: `docs/<version>/android/`
- iOS: `docs/<version>/ios/`
- Windows: `docs/<version>/windows/`
- macOS: `docs/<version>/mac/`

# Artifact locations (`dist/<version>/`)

- Android: `dist/1.12.0/android/android-native-toolkit-1.3.0.aar`
- iOS: `dist/1.12.0/ios/ios-native-toolkit-1.3.0.xcframework`
- Windows (C++ API): `dist/1.12.0/windows/windows-native-toolkit-2.0.0.nupkg`
- Windows (C ABI): `dist/1.12.0/windows/windows-native-toolkit-capi-2.0.0.nupkg`
- macOS: `dist/1.12.0/mac/mac-native-toolkit-1.3.0.xcframework`

# Native Toolkit

- native-toolkit is a toolkit for using native platform features in a unified way.
- The package includes native plugins and samples for Android / iOS / Windows / macOS, and native platform features are available through singleton APIs.

# Version

## 1.12.0

# Supported OS versions

- Android 12+
- iOS 18+
- Windows 11+
- macOS 15+

# Feature list

## Android

- Dialog features
  - Basic dialog
  - Confirmation dialog
  - Single-choice dialog
  - Multi-choice dialog
  - Text input dialog
  - Login dialog
- Notification features
  - Show / update / cancel notifications
  - Manage notification channels
  - Schedule notifications
- Share features
  - Text / URL share
  - Image share
  - File share
  - Rich preview
  - Custom Chooser Actions (Android 14+)
  - Direct Share Target
  - Share with callback
  - Receive incoming shares
- Clipboard features
  - Copy (plain text, HTML, URI, multiple text)
  - Sensitive content copy (preview suppression, Android 13+)
  - Read / has clip / metadata inspection
  - Clear
  - Clipboard change observation

## iOS

- Dialog features
  - Basic dialog
  - Confirmation dialog
  - Destructive dialog
  - Action sheet
  - Text input dialog
  - Login dialog
- Notification features
  - Permission
  - Show / update / cancel notifications
  - Scheduled notifications
  - Notifications with attachment
  - Badge
  - Categories and actions
- Share features
  - Text / URL share
  - Rich preview
  - Image / file share (single and multiple)
  - Combined content (subject, exclude activity types)
- Clipboard features
  - Copy (plain text, HTML, URL, image file / data, color, custom data, multiple text, multiple representations)
  - Copy options (localOnly, expiration date)
  - Append
  - Read / data read / metadata snapshot
  - Named and unique pasteboard lifecycle
  - Asynchronous item loading (text / URL / image / file)
  - Pattern detection (11 patterns)
  - Clipboard change observation
  - System paste button (UIPasteControl)

## Windows

- Dialog features
  - Basic dialog
  - File picker dialog
  - Multi-file picker dialog
  - Folder picker dialog
  - Multi-folder picker dialog
  - Save file dialog
- Notification features
  - Show / update / cancel notifications
  - Scheduled notifications
  - Progress notifications
  - Badge (packaged apps)
  - Action buttons and text input

- Clipboard features
  - Copy (text, HTML, files, image, custom format, multiple formats at once)
  - Write options (exclude from history, exclude from roaming, sensitive)
  - Paste (text, HTML, files, image, custom format)
  - Format inspection (has format, format list, preferred format)
  - Clear
  - Clipboard change observation
  - Delayed rendering (reserve formats, render on demand)
  - Clipboard history (availability, list, restore, delete, clear unpinned, cancel)

## Mac

- Dialog features
  - Basic dialog
  - File picker dialog
  - Multi-file picker dialog
  - Folder picker dialog
  - Multi-folder picker dialog
  - Save file dialog
- Notification features
  - Permission
  - Show / update / cancel notifications
  - Scheduled notifications
  - Badge
  - Categories and actions
- Share features
  - Text / URL / image / file share via the picker (single and multiple items)
  - Exclude services from the picker
  - Direct service execution (recipients, subject)
  - Check whether a service can perform
- Clipboard features
  - Copy (text, URL, image, multiple items, multiple representations)
  - Copy options (localOnly, on by default)
  - Append
  - Read / data read / snapshot with a type filter
  - Named and unique pasteboard lifecycle
  - Detection (patterns, values, metadata; macOS 15.4+)
  - Clipboard change observation
  - System paste button (PasteButton)
  - Clear

## Samples

- Android sample
  - Install Android Studio.
    - <a href="https://developer.android.com/studio" target="_blank" rel="noopener noreferrer">Reference site</a>
  - Launch Android Studio.
  - Select "File" → "Open...".
  - Select `native-toolkit/android/AndroidLibraryExample` and click "Open".
  - Connect an Android device.
  - Click "Run" to install the sample app.
    <p align="center">
        <img src="images/android/Example_AndroidDialogFragment.png" alt="Example_AndroidDialogFragment" width="400" />
    </p>

- iOS sample
  - Install Xcode.
    - <a href="https://developer.apple.com/xcode" target="_blank" rel="noopener noreferrer">Reference site</a>
  - Launch Xcode.
  - Select "Open Existing Project...".
  - Select `native-toolkit/ios/IosWorkspace.xcworkspace` and click "Open".
  - Click "Run" to install the sample app.
    <p align="center">
        <img src="images/ios/Example_Top.png" alt="Example_Top" width="400" />
    </p>

- Windows sample
  - Install Visual Studio 2022.
    - <a href="https://visualstudio.microsoft.com/vs/" target="_blank" rel="noopener noreferrer">Reference site</a>
  - Launch Visual Studio 2022.
  - Select "Open a project or solution".
  - Select `native-toolkit\windows\WindowsLibraryExample\WindowsLibraryExample.sln` and click "Open".
  - Select "Debug" → "Start Debugging" to install the sample app.
    <p align="center">
        <img src="images/windows/Example_Top.png" alt="Example_Top" width="800" />
    </p>

- Mac sample
  - Install Xcode.
    - <a href="https://developer.apple.com/xcode" target="_blank" rel="noopener noreferrer">Reference site</a>
  - Launch Xcode.
  - Select "Open Existing Project...".
  - Select `native-toolkit/mac/MacWorkspace.xcworkspace` and click "Open".
  - Click "Run" to install the sample app.
    <p align="center">
        <img src="images/mac/Example_Top.png" alt="Example_Top" width="800" />
    </p>

## Library integration

### Android

#### Supported platform: Android (AAR / ABI-independent)

1. Place `android-native-toolkit-1.3.0.aar` in `app/libs`.
2. Add repository settings in `settings.gradle.kts` to resolve the AAR.
3. Add dependency settings in `app/build.gradle.kts` to reference the AAR.
4. Run Gradle sync.
5. Verify that the build succeeds.
   Add the following settings:

**settings.gradle.kts:**

```gradle

dependencyResolutionManagement {
    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
    repositories {
        google()
        mavenCentral()

        // Add this to resolve local AAR files.
        flatDir {
            dirs("app/libs")
        }
    }
}
```

**app/build.gradle.kts:**

```gradle

dependencies {
    // Add this dependency to reference the AAR.
  implementation(files("libs/android-native-toolkit-1.3.0.aar"))
}
```

### iOS

#### Supported platform: iOS (Device: arm64 / Simulator: arm64, x86_64)

1. Copy `ios-native-toolkit-1.3.0.xcframework` to the `Frameworks` folder (create it if needed) under your Xcode project.
2. Open the target project in Xcode 26.2 and select your app target in **Project Navigator**.
3. Open the **General** tab and click **+** in **Frameworks, Libraries, and Embedded Content**.
4. Select **Add Other...** → **Add Files...** and add `Frameworks/ios-native-toolkit-1.3.0.xcframework`.
5. Set the embed option of `ios-native-toolkit-1.3.0.xcframework` to **Embed & Sign**.
6. Open **Build Settings** of the same target and add `$(PROJECT_DIR)/Frameworks` to `Framework Search Paths`. (Usually non-recursive)
7. Verify that Team is correctly configured in **Signing & Capabilities**.
8. Run **Product** → **Clean Build Folder**, then build and run with **Run**.
9. Integration is complete if the app launches without errors.

### Windows

#### Supported platform: Windows x64 (win-x64)

The Windows library ships as two NuGet packages over one implementation. Install the one that matches how you call it; installing both is fine.

| Package | For | Contents |
|---|---|---|
| `NativeToolkit` | C++ callers | The C++ API headers (`NativeToolkit/`) and the static library |
| `NativeToolkit.CApi` | C callers, and other languages | The C ABI headers (`NativeToolkitC/`), `NativeToolkitC.dll` and its import library |

`NativeToolkit` is a static library built with MSVC v143, `/std:c++20` and the DLL runtime (`/MD`, `/MDd`), x64 only; a project that differs in those settings fails the link with LNK2038. `NativeToolkit.CApi` carries no such requirement, because its headers are plain C99.

Both declare `Microsoft.WindowsAppSDK` as a dependency, which NuGet restores with them. An app without package identity also needs `Microsoft.WindowsAppRuntime.Bootstrap.dll` next to its executable.

1. Copy `windows-native-toolkit-2.0.0.nupkg` and `windows-native-toolkit-capi-2.0.0.nupkg` to `C:\packages`.
2. Launch Visual Studio 2022 and open **Tools** → **Options** → **NuGet Package Manager** → **Package Sources**.
3. Click **+** and enter:
   - Name: LocalPackages
   - Source: C:\packages
     Then click **Update** to save.
4. Open your target solution.
5. In **Solution Explorer**, right-click your project and select **Manage NuGet Packages**.
6. Change **Package source** to **LocalPackages**.
7. Search for **NativeToolkit** or **NativeToolkit.CApi** and click **Install**.
8. If a license prompt appears, accept it to complete installation.

#### Migrating from 1.x

1.x shipped one package whose only API was the C ABI (`showAlertDialog`, `initNotificationManager`, `initClipboardManager` and so on). 2.0.0 replaces it: every function has a new name and a new signature, so nothing written against 1.x still compiles.

| 1.x | 2.0.0 |
|---|---|
| `<common.h>`, `<WindowsDialogManager.h>`, `<WindowsNotificationManager.h>`, `<WindowsClipboardManager.h>` | `<NativeToolkit/Dialog.h>` and friends, or `<NativeToolkitC/Dialog.h>` and friends |
| JSON payload strings | Typed structs (C++) or a content builder (C ABI) |
| `wchar_t*` buffers, sized by calling twice | Values returned by the call (C++), or handles freed with their `_free` (C ABI) |
| `DWORD* pError` | `Result<T>` (C++), or the return value plus `ntk_last_system_code()` (C ABI) |
| Free functions with process-wide state | `Clipboard::Session` and `Notification::Manager`, whose lifetimes are explicit |

The per-operation mapping is in each feature page's Windows section. A project that cannot move yet can stay on the 1.11.0 release, whose Windows package still holds the 1.x C ABI.

### macOS

#### Supported platform: macOS arm64, x86_64

1. Copy `mac-native-toolkit-1.3.0.xcframework` to the `Frameworks` folder (create it if needed) under your Xcode project.
2. Open the target project in Xcode 26.2 and select your app target in Project Navigator.
3. Open the **General** tab and click `+` in **Frameworks, Libraries, and Embedded Content**.
4. Select "Add Other..." → "Add Files..." and add `Frameworks/mac-native-toolkit-1.3.0.xcframework`.
5. Set the embed option of `mac-native-toolkit-1.3.0.xcframework` to **Embed & Sign**.
6. Open **Build Settings** of the same target and add `$(PROJECT_DIR)/Frameworks` to `Framework Search Paths`. (Usually non-recursive)
7. Verify that Team is correctly configured in **Signing & Capabilities**.
8. Run **Product** → **Clean Build Folder**, then build and run with **Run**.
9. Integration is complete if the app launches without errors.

# API usage

- [Dialog](dialog.md)
- [Notification](notification.md)
- [Share](share.md)
- [Clipboard](clipboard.md)
